chaged from smarty to twig

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^8.2",
         "smarty/smarty": "^4.3",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "twig/twig": "^3.6"
     }
 }
